stderr
FizzBuzzTest.java:16: error: incompatible types: String cannot be converted to int
        int expected = "3";
                       ^
FizzBuzzTest.java:18: error: incompatible types: int cannot be converted to String
        int actual = number.answer(expected);
                                   ^
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
2 errors
